--- a/openlibrary/templates/home/index.html
+++ b/openlibrary/templates/home/index.html
@@ -18,7 +18,7 @@ $add_metatag(name="twitter:card", content="homepage_summary")
 <div id="contentBody">
   $:render_template("home/categories", test=test)
 
-  $:render_template("books/custom_carousel", books=get_cached_sponsorable_editions(), title="Books to Sponsor", url="/sponsorship", key="sponsor_books", test=test)
+  $#:render_template("books/custom_carousel", books=get_cached_sponsorable_editions(), title="Books to Sponsor", url="/sponsorship", key="sponsor_books", test=test)
 
   $:render_template("books/custom_carousel", books=readonline_carousel(), title=_('Classic Books'), url="/read", key="public_domain", test=test)
 
